--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "mongoose": "^5.13.16"
   },
   "devDependencies": {
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.7"
   }
 }
