--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "lint": "eslint *.js",
     "start": "nodemon app.js",
     "test": "jest"
   },
