--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,7 +21,7 @@ jobs:
     - name: "Activate Namespace"
       uses: okteto/namespace@latest
       with:
-        name: SpaceCadet5100
+        name: spacecadet5100
 
     - name: "Trigger the pipeline"
       uses: okteto/pipeline@latest
